Fixed spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,6 +33,10 @@ header {
     margin-top: 25px;
 }
 
+.logo {
+    padding-left: 5%;
+}
+
 .cherry-swash {
     font-family: 'Cherry Swash';
 }
